--- a/Practices/01S_Pytorch.ipynb
+++ b/Practices/01S_Pytorch.ipynb
@@ -62,7 +62,7 @@
         "id": "hj-wcnpoUX_O",
         "outputId": "bb7118ef-ce8f-4050-a6c5-87dfa3fef3db"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -880,7 +880,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![calculation_graph](https://data.bioml.ru/htdocs/courses/bioml/neural_networks/pytorch/img/calc_graph.png)\n",
+        "![calculation_graph](https://github.com/Existanze54/sirius-neural-networks-2024/blob/main/Images/computational_graph.png?raw=true)\n",
         "\n",
         "Граф вычислений для $f(x, y) = x^2 + xy + (x+y)^2$"
       ],
@@ -895,6 +895,15 @@
       ],
       "metadata": {
         "id": "j2plbOojGO1O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![calculation_graph](https://github.com/Existanze54/sirius-neural-networks-2024/blob/main/Images/forward_backward_propagation.png?raw=true)"
+      ],
+      "metadata": {
+        "id": "ZgOl-t-e68Hl"
       }
     },
     {
@@ -918,10 +927,10 @@
     {
       "cell_type": "code",
       "source": [
-        "a = torch.tensor([-0.3, 0.1, 0.2], requires_grad=True)"
+        "#X.grad.data.zero_()"
       ],
       "metadata": {
-        "id": "BYpPbe2VGuJR"
+        "id": "0JXAyMFz9Fuo"
       },
       "execution_count": null,
       "outputs": []
@@ -929,54 +938,71 @@
     {
       "cell_type": "code",
       "source": [
-        "m = a.mean()\n",
-        "m"
+        "X = torch.tensor([1., 2.], requires_grad=True)\n",
+        "x, y = X"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_3r6AUVoG-A3",
-        "outputId": "ff605d28-981a-4187-cdb2-fa87934684da"
+        "id": "T4Fhz9SV3ih8"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#f = X[0]**2 + X[0] * X[1] + (X[0] + X[1]) ** 2\n",
+        "\n",
+        "f = x ** 2 + x * y + (x + y) ** 2"
+      ],
+      "metadata": {
+        "id": "E5nUSR8W9CHC"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "f.backward()"
+      ],
+      "metadata": {
+        "id": "l4v7xj304NmG"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X.grad"
+      ],
+      "metadata": {
+        "id": "RcEeKQ454PHh",
+        "outputId": "c7fcdcfe-c8fc-42cc-e49b-8fe985e92290",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor(-4.9671e-09, grad_fn=<MeanBackward0>)"
+              "tensor([38., 28.])"
             ]
           },
           "metadata": {},
-          "execution_count": 76
+          "execution_count": 41
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "$m(a) = \\dfrac{a_0 + a_1 + a_2}{3}$"
-      ],
-      "metadata": {
-        "id": "SnV5ji05IPA1"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "m.backward()"
-      ],
-      "metadata": {
-        "id": "nQ1KzEKKICUD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "$\\dfrac{\\partial m}{\\partial a_i} = \\dfrac{1}{3}$"
+        "$\\dfrac{\\partial f}{\\partial x} = {2x+y+2(x+y)}$\n",
+        "\n",
+        "$\\dfrac{\\partial f}{\\partial y} = {x+2(x+y)}$"
       ],
       "metadata": {
         "id": "33GpXxYNIdp7"
@@ -984,175 +1010,9 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "a.grad"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FnTRXYJnID9J",
-        "outputId": "f2884293-1416-4677-b81e-93a04287786a"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([0.3333, 0.3333, 0.3333])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 70
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a = torch.tensor([-0.3, 0.1, 0.2], requires_grad=True)"
-      ],
-      "metadata": {
-        "id": "P5ne945hDpVa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "$s(a) = \\dfrac{a_0^2 + a_1^2 + a_2^2}{3}$"
-      ],
-      "metadata": {
-        "id": "LHm-6rDuI3Sl"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "s = (a ** 2).mean()"
-      ],
-      "metadata": {
-        "id": "dM3NTevdI1t0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "s"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_mVdZP0ph5FI",
-        "outputId": "740a15b4-e32f-493c-b9de-74e96d7a96c4"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor(0.0467, grad_fn=<MeanBackward0>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "s.backward()"
-      ],
-      "metadata": {
-        "id": "RKPmXRnkJCBn"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a.grad"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tqXLPgbrDNft",
-        "outputId": "567f07b8-b0a6-4cff-8af3-411f690ee323"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([-0.2000,  0.0667,  0.1333])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "$\\dfrac{\\partial s}{\\partial a_i} = \\dfrac{2}{3}a_i$"
-      ],
-      "metadata": {
-        "id": "G12puXJoJSgF"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "x = torch.tensor(1.0, requires_grad=True)\n",
-        "y = torch.tensor(-2.0, requires_grad=True)"
-      ],
-      "metadata": {
-        "id": "DfFdjzBfHbEj"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "f = x + y\n",
-        "g = f**2 + x"
-      ],
-      "metadata": {
-        "id": "j6yyRCgxHxHs"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "g.backward()"
-      ],
-      "metadata": {
-        "id": "dI2KOGBAHylG"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "x.grad, y.grad"
-      ],
-      "metadata": {
-        "id": "zhjLA_sNHy87"
+        "id": "m6EOoFOV7JvX"
       },
       "execution_count": null,
       "outputs": []
