--- a/Practices/01S_Pytorch.ipynb
+++ b/Practices/01S_Pytorch.ipynb
@@ -900,6 +900,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Посмотрим на примере."
+      ],
+      "metadata": {
+        "id": "608LRNHPGrU2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "![calculation_graph](https://github.com/Existanze54/sirius-neural-networks-2024/blob/main/Images/forward_backward_propagation.png?raw=true)"
       ],
       "metadata": {
@@ -909,10 +918,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Посмотрим на примере."
+        "$\\dfrac{\\partial f}{\\partial x} = \\dfrac{\\partial f}{\\partial a}\\dfrac{\\partial a}{\\partial x} + \\dfrac{\\partial f}{\\partial b}\\dfrac{\\partial b}{\\partial x} + \\dfrac{\\partial f}{\\partial c}\\dfrac{\\partial c}{\\partial x}={1*2x+1*y+2c*1}={2x+y+2(x+y)}$"
       ],
       "metadata": {
-        "id": "608LRNHPGrU2"
+        "id": "GRr93DhU9kgH"
       }
     },
     {
@@ -977,11 +986,11 @@
         "X.grad"
       ],
       "metadata": {
-        "id": "RcEeKQ454PHh",
-        "outputId": "c7fcdcfe-c8fc-42cc-e49b-8fe985e92290",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RcEeKQ454PHh",
+        "outputId": "c7fcdcfe-c8fc-42cc-e49b-8fe985e92290"
       },
       "execution_count": 41,
       "outputs": [
