--- a/Practices/03S_Convolutions.ipynb
+++ b/Practices/03S_Convolutions.ipynb
@@ -652,6 +652,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Небольшой пример работы сверточного слоя с 3 входными и 2 выходными каналами.\n",
+        "\n",
+        "<img src=\"https://i.stack.imgur.com/uwHol.gif\" width=\"800\">"
+      ],
+      "metadata": {
+        "id": "-h1jPdbBUIXk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class Net(nn.Module):\n",
@@ -804,7 +815,7 @@
       "source": [
         "Пооптимизируйте архитектуру вашей нейронной сети:\n",
         "\n",
-        "1. Добавьте больше CNN-блоков\n",
+        "1. Поэкспериментируйте с количеством CNN-блоков\n",
         "\n",
         "2. Попробуйте использовать GlobalAveragePooling\n",
         "\n",
