--- a/Practices/03S_Convolutions.ipynb
+++ b/Practices/03S_Convolutions.ipynb
@@ -693,10 +693,6 @@
       "cell_type": "code",
       "source": [
         "for epoch in range(NUM_EPOCHS):\n",
-        "    train_correct = 0\n",
-        "    train_total = 0\n",
-        "    test_correct = 0\n",
-        "    test_total = 0\n",
         "\n",
         "    model.train()\n",
         "    for inputs, targets in tqdm(train_loader):\n",
@@ -708,7 +704,7 @@
         "            targets = targets.to(torch.float32)\n",
         "            loss = criterion(outputs, targets)\n",
         "        else:\n",
-        "            targets = targets.squeeze().long()\n",
+        "            targets = targets.squeeze()\n",
         "            loss = criterion(outputs, targets)\n",
         "\n",
         "        loss.backward()\n",
@@ -738,6 +734,7 @@
       "cell_type": "code",
       "source": [
         "def test(split):\n",
+        "\n",
         "    model.eval()\n",
         "    y_true = torch.tensor([])\n",
         "    y_score = torch.tensor([])\n",
@@ -752,9 +749,8 @@
         "                targets = targets.to(torch.float32)\n",
         "                outputs = outputs.softmax(dim=-1)\n",
         "            else:\n",
-        "                targets = targets.squeeze().long()\n",
+        "                targets = targets.squeeze().resize(-1, 1)\n",
         "                outputs = outputs.softmax(dim=-1)\n",
-        "                targets = targets.float().resize_(len(targets), 1)\n",
         "\n",
         "            y_true = torch.cat((y_true, targets), 0)\n",
         "            y_score = torch.cat((y_score, outputs), 0)\n",
