--- a/Homeworks/01HW_PyTorch.ipynb
+++ b/Homeworks/01HW_PyTorch.ipynb
@@ -653,6 +653,16 @@
       "source": [
         "# your code here"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ссылку на Jupyter Notebook присылать на почту:\n",
+        "tailsdoll98@gmail.com\n"
+      ],
+      "metadata": {
+        "id": "nST9b14lTyGX"
+      }
     }
   ],
   "metadata": {
