--- a/Practices/04S_CNN_part2.ipynb
+++ b/Practices/04S_CNN_part2.ipynb
@@ -64,7 +64,7 @@
       "source": [
         "!wget https://kodomo.fbb.msu.ru/FBB/ml/malaria_dataset.zip"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +93,7 @@
       "source": [
         "!unzip malaria_dataset.zip > /dev/null"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
       "source": [
         "from IPython.display import Image"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
       "source": [
         "Image(filename=\"cell_images/Parasitized/C100P61ThinF_IMG_20150918_144104_cell_162.png\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +157,7 @@
       "source": [
         "Image(filename=\"cell_images/Uninfected/C99P60ThinF_IMG_20150918_140900_cell_66.png\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +193,7 @@
         "transform=Compose([Resize((32,32)),\n",
         "                  ToTensor()])"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,10 +212,12 @@
       },
       "source": [
         "from torchvision import datasets\n",
+        "# примочка торча, позволяющая собрать датасет с image folder'а\n",
+        "# вместо того чтобы писать свой датасет\n",
         "data = datasets.ImageFolder(root=\"cell_images\",\n",
         "                            transform=transform)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,9 +240,10 @@
       },
       "source": [
         "df_size=len(data)\n",
-        "print('Size = {}'.format(df_size))"
+        "print('Size = {}'.format(df_size))\n",
+        "# 27 тыc. картинок"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +277,7 @@
         "\n",
         "import torchvision.transforms as transforms"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -286,6 +289,7 @@
         "TEST_SIZE = int(0.25 * df_size)\n",
         "VAL_SIZE = int(0.25 * (df_size - TEST_SIZE))\n",
         "\n",
+        "# пока что случайным образом разобьем на обучение и тест\n",
         "all_train_dataset, test_dataset = torch.utils.data.random_split(data,\n",
         "                                                            [df_size - TEST_SIZE, TEST_SIZE],\n",
         "                                                            generator=torch.Generator().manual_seed(42))\n",
@@ -294,7 +298,7 @@
         "                                                            [df_size - TEST_SIZE - VAL_SIZE, VAL_SIZE],\n",
         "                                                            generator=torch.Generator().manual_seed(42))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -318,7 +322,7 @@
         "                                         batch_size=2*128,\n",
         "                                         shuffle=False)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -330,7 +334,7 @@
       "metadata": {
         "id": "h5dpHj18IRXn"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -345,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +375,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,14 +404,15 @@
         "    def __init__(self):\n",
         "        super().__init__()\n",
         "\n",
-        "        self.featurizer = nn.Sequential(nn.Conv2d(in_channels=3, out_channels=8, kernel_size=3),\n",
+        "        self.featurizer = nn.Sequential(#in features = 32*32\n",
+        "                                        nn.Conv2d(in_channels=3, out_channels=8, kernel_size=3), # out features = 30 * 30\n",
         "                                        nn.ReLU(),\n",
-        "                                        nn.MaxPool2d(kernel_size=2),\n",
+        "                                        nn.MaxPool2d(kernel_size=2), # out features = 15 * 15\n",
         "                                        # Conv2d 3x3, in_c = 8, out channels = 32,\n",
-        "                                        nn.Conv2d(in_channels=8, out_channels=32, kernel_size=3),\n",
+        "                                        nn.Conv2d(in_channels=8, out_channels=32, kernel_size=3), # out features = 13 * 13\n",
         "                                        nn.ReLU(),\n",
         "                                        # MaxPool 2x2\n",
-        "                                        nn.MaxPool2d(2)\n",
+        "                                        nn.MaxPool2d(2) # out features = 6 * 6\n",
         "                                        )\n",
         "        self.fc = nn.Sequential(nn.Flatten(),\n",
         "                                # linear layer 32 * 6 * 6 -> 64\n",
@@ -420,7 +425,7 @@
         "        x = self.fc(x)\n",
         "        return x"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -431,7 +436,7 @@
       "source": [
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -447,7 +452,7 @@
         "model = ConvNet().to(device)\n",
         "print(model)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,7 +490,7 @@
         "criteria=nn.BCEWithLogitsLoss()\n",
         "optimizer=optim.Adam(model.parameters())\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -505,7 +510,7 @@
       "source": [
         "NUM_EPOCHS=10"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -553,7 +558,7 @@
         "\n",
         "print('Finished Training')"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,7 +629,7 @@
         "\n",
         "print(\"\\nFinished Training\")"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -647,7 +652,7 @@
         "y_true = np.concatenate(y_true)\n",
         "y_pred = np.concatenate(y_pred)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -662,7 +667,7 @@
       "source": [
         "np.mean(y_true == y_pred)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -693,6 +698,20 @@
       "source": [
         "А теперь внимательно прочитаем [описание](https://lhncbc.nlm.nih.gov/LHC-publications/pubs/MalariaDatasets.html) датасета и обнаружим, что вообще-то говоря, разные клетки взяты от разных пациентов. Более того, у больных пациентов были и здоровые клетки, которые тоже были добавлены в датасет"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Во-первых, нам нужно учесть, что фото принадлежат разным пациентам\n",
+        "# Поэтому в датасет добавляем все фото для каждого пациента, чтобы сетка по максимуму пыталась находить различия\n",
+        "# между здоровыми и зараженными клетками, а не различия между пациентами.\n",
+        "# Во-вторых, нужно учесть, что у зараженных пациентов есть в том числе фотки здоровых эритроцитов."
+      ],
+      "metadata": {
+        "id": "mpYDlKSDpAz1"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1252,7 +1271,7 @@
       "source": [
         "!wget https://kodomo.fbb.msu.ru/FBB/year_20/ml/ANDR_dataset.fasta"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1294,7 +1313,7 @@
       "source": [
         "!pip install biopython"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1318,7 +1337,7 @@
       "source": [
         "from Bio import SeqIO"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1334,7 +1353,7 @@
         "seq = next(SeqIO.parse(\"ANDR_dataset.fasta\", 'fasta'))\n",
         "seq"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1372,7 +1391,7 @@
         "        dt[field.strip()] = value.strip()\n",
         "    return dt"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1387,7 +1406,7 @@
       "source": [
         "parse_description(seq.description)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1422,7 +1441,7 @@
         "    tf_cnt[tf] += 1\n",
         "tf_cnt"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1549,7 +1568,7 @@
         "        code = code[:, :4]\n",
         "        return code"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1564,7 +1583,7 @@
         "id": "tkCKlTZ6vU6g",
         "outputId": "f83e2aeb-90a5-4a97-bdde-888fba9ee785"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1595,7 +1614,7 @@
         "id": "5vSA_oHKvVfP",
         "outputId": "17609c5e-9529-4a25-f329-42fb89565591"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1626,7 +1645,7 @@
         "id": "R8Q1cZDnvVl2",
         "outputId": "61dec482-cac5-4650-989c-4c7951dd39ee"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1679,10 +1698,10 @@
         "        self.stride = stride\n",
         "        self.padding = padding\n",
         "        self.dilation = dilation\n",
-        "        self.weight = nn.Parameter(torch.empty(num_motives,\n",
-        "                                               1,\n",
-        "                                               motif_length,\n",
-        "                                               4))\n",
+        "        self.weight = nn.Parameter(torch.empty(num_motives, # количество мотивов (разные kernels)\n",
+        "                                               1, # фиктивная размерность для параллельных расчетах на батчах\n",
+        "                                               motif_length, # размер мотива в one-hot представлении motif_length * 4 (kernel size)\n",
+        "                                               4)) #\n",
         "        if bias:\n",
         "            self.bias = nn.Parameter(torch.empty(out_channels))\n",
         "        else:\n",
@@ -1703,13 +1722,15 @@
         "        x = torch.maximum(x1, x2)\n",
         "        return x"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "t = DNAConv2d(16, 32).forward(Seq2Tensor().forward(\"ATGCTTGC\" * 500).unsqueeze(0))\n",
+        "some_seq = \"ATGCTTGC\" * 500\n",
+        "\n",
+        "t = DNAConv2d(16, 32).forward(Seq2Tensor().forward(some_seq).unsqueeze(0))\n",
         "t.shape"
       ],
       "metadata": {
@@ -1719,7 +1740,7 @@
         "id": "GVYwNUHpwjwu",
         "outputId": "7c5b288a-46be-484c-c4e4-40a4065e4871"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1736,7 +1757,7 @@
     {
       "cell_type": "code",
       "source": [
-        "len(\"ATGCTTGC\" * 500)"
+        "len(some_seq)"
       ],
       "metadata": {
         "id": "Q0GpGKpJVJpK",
@@ -1745,7 +1766,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1758,6 +1779,17 @@
           "execution_count": 46
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(some_seq) - (32 - 1) # последний мотив не влезает"
+      ],
+      "metadata": {
+        "id": "E1TkJ9Weqds5"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1811,7 +1843,7 @@
         "\n",
         "        return x\n"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1831,7 +1863,7 @@
       "source": [
         "model = BindPredict(16, 32)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1849,7 +1881,7 @@
         "seq_tensor = seq_tensor.unsqueeze(0) # create batch of size 1 with 1 channel\n",
         "print(seq_tensor.shape)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1873,7 +1905,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1935,7 +1967,7 @@
         "    def __len__(self):\n",
         "        return len(self.dataset)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1946,7 +1978,7 @@
       "source": [
         "dataset = SeqDataset(\"ANDR_dataset.fasta\", transforms=Seq2Tensor())"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1961,7 +1993,7 @@
       "source": [
         "dataset[0]"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1994,7 +2026,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2029,7 +2061,7 @@
         "                               [len(dataset) -val_size, val_size],\n",
         "                               generator=torch.Generator().manual_seed(42))"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2040,7 +2072,7 @@
       "source": [
         "from torch.utils.data import DataLoader"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2052,7 +2084,7 @@
         "train_dataloader = DataLoader(train_ds, batch_size=4096, shuffle=True)\n",
         "val_dataloader = DataLoader(val_ds, batch_size=4096, shuffle=False)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2072,7 +2104,7 @@
         "\n",
         "criterion = nn.BCEWithLogitsLoss()"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -2101,7 +2133,7 @@
       "source": [
         "EPOCH_NUM = 200"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
