--- a/Practices/05S_NN_methods.ipynb
+++ b/Practices/05S_NN_methods.ipynb
@@ -850,48 +850,37 @@
         "\n",
         "        self.layer1 = nn.Sequential(\n",
         "            nn.Conv2d(in_channels, 16, kernel_size=3),\n",
-        "            nn.BatchNorm2d(16),\n",
-        "            nn.ReLU()\n",
-        "        )\n",
         "            ### Вставьте нужное (активацию, BatchNorm, Dropout и пр.) ###\n",
+        "        )\n",
         "\n",
         "        self.layer2 = nn.Sequential(\n",
         "            nn.Conv2d(16, 16, kernel_size=3),\n",
-        "            nn.BatchNorm2d(16),\n",
-        "            nn.ReLU(),\n",
         "            ### Вставьте нужное (активацию, BatchNorm, Dropout и пр.) ###\n",
         "            nn.MaxPool2d(kernel_size=2, stride=2))\n",
         "\n",
         "        self.layer3 = nn.Sequential(\n",
         "            nn.Conv2d(16, 64, kernel_size=3),\n",
-        "            nn.BatchNorm2d(64),\n",
-        "            nn.ReLU()\n",
-        "        )\n",
         "            ### Вставьте нужное (активацию, BatchNorm, Dropout и пр.) ###\n",
+        "        )\n",
         "\n",
         "        self.layer4 = nn.Sequential(\n",
         "            nn.Conv2d(64, 64, kernel_size=3),\n",
-        "            nn.BatchNorm2d(64),\n",
-        "           nn.ReLU())\n",
         "            ### Вставьте нужное (активацию, BatchNorm, Dropout и пр.) ###\n",
+        "        )\n",
         "\n",
         "        self.layer5 = nn.Sequential(\n",
         "            nn.Conv2d(64, 64, kernel_size=3, padding=1),\n",
-        "            nn.BatchNorm2d(64),\n",
-        "            nn.ReLU(),\n",
         "            ### Вставьте нужное (активацию, BatchNorm, Dropout и пр.) ###\n",
-        "            nn.MaxPool2d(kernel_size=2, stride=2))\n",
+        "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
+        "        )\n",
         "\n",
         "        self.fc = nn.Sequential(\n",
         "            nn.Linear(64 * 4 * 4, 128),\n",
-        "            nn.BatchNorm1d(128),\n",
-        "            nn.ReLU(),\n",
         "            ### Вставьте нужное (активацию, BatchNorm, Dropout и пр.) ###\n",
         "            nn.Linear(128, 128),\n",
-        "            nn.BatchNorm1d(128),\n",
-        "            nn.ReLU(),\n",
         "            ### Вставьте нужное (активацию, BatchNorm, Dropout и пр.) ###\n",
-        "            nn.Linear(128, num_classes))\n",
+        "            nn.Linear(128, num_classes)\n",
+        "        )\n",
         "\n",
         "    def forward(self, x):\n",
         "        x = self.layer1(x)\n",
@@ -1050,7 +1039,7 @@
         "# 4. Sigmoid, with BatchNorm, AdamW\n",
         "# 5. ReLU, with BatchNorm, AdamW\n",
         "\n",
-        "# 6. dropouts\n",
+        "# 6. Dropouts\n",
         "\n",
         "# 7. ReLU, with BatchNorm, AdamW, OneCycleLR"
       ],
@@ -1251,10 +1240,6 @@
       "cell_type": "code",
       "source": [
         "for epoch in range(NUM_EPOCHS):\n",
-        "    train_correct = 0\n",
-        "    train_total = 0\n",
-        "    test_correct = 0\n",
-        "    test_total = 0\n",
         "\n",
         "    model.train()\n",
         "    for inputs, targets in tqdm(train_loader):\n",
